<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tcl.statistics.client.MainActivity">

    <TextView
        android:id="@+id/tx_activity_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/activity_one"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btn_click_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_activity_one"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/client_event" />


    <Button
        android:id="@+id/btn_test_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_click_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/test_error" />


    <Button
        android:id="@+id/btn_switch_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_test_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forward" />


</RelativeLayout>
