<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tcl.statistics.client.ActivityTwo">


    <TextView
        android:id="@+id/tx_activity_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_two"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btn_click_event_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_activity_one"
        android:layout_centerHorizontal="true"
        android:text="@string/client_event" />

    <Button
        android:id="@+id/btn_switch_page_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_click_event"
        android:layout_centerHorizontal="true"
        android:text="@string/forward" />

</TableLayout>
